[package]
name = "hf-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.16"
colored = "2.1.0"
futures-util = "0.3.30"
hf-hub = "0.3.2"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
